# racclassify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/racclassify/: __init__.py  _classifier.py  _corpus.py  _embeddings.py  _store.py
tests/: conftest.py  test_classifier.py  test_integration.py  test_store.py
