[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "racclassify"
version = "0.1.0"
description = "Zero-shot text classification using semantic prototypes with adaptive kNN learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["nlp", "classification", "embeddings", "zero-shot", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
chromadb = ["chromadb>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kamoras/racclassify"
Repository = "https://github.com/kamoras/racclassify"
Issues = "https://github.com/kamoras/racclassify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/racclassify"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/racclassify"]
